--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,7 +53,8 @@ install(TARGETS helloworld_cli RUNTIME DESTINATION bin)
 if (WIN32)
     set(CPACK_GENERATOR WIX)
 else ()
-    set(CPACK_GENERATOR RPM)
+    #set(CPACK_GENERATOR RPM)
+	set(CPACK_GENERATOR DEB)
 endif()
 
 set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
@@ -62,7 +63,7 @@ set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 
 set(CPACK_PACKAGE_CONTACT andreykoloskov.ru@gmail.com)
 
-#set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
+set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON) #
 
 include(CPack)
 
