--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,14 +1,14 @@
-#set_property (GLOBAL PROPERTY USE_FOLDERS ON)
+set_property (GLOBAL PROPERTY USE_FOLDERS ON)
 
-#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
-#link_directories(${BOOST_LIBRARYDIR})
-#include_directories(${BOOST_INCLUDEDIR})
+link_directories(${BOOST_LIBRARYDIR})
+include_directories(${BOOST_INCLUDEDIR})
 
-#set (Boost_USE_STATIC_LIBS ON)
-#set (Boost_USE_MULTITHREADED ON)
+set (Boost_USE_STATIC_LIBS ON)
+set (Boost_USE_MULTITHREADED ON)
 
 find_package(Threads REQUIRED)
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
@@ -33,8 +33,6 @@ else()
 endif()
 
 set_target_properties(test_version PROPERTIES
-    #${Boost_LIBRARIES}
-	COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
     INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
 )
 
@@ -53,8 +51,8 @@ install(TARGETS helloworld_cli RUNTIME DESTINATION bin)
 if (WIN32)
     set(CPACK_GENERATOR WIX)
 else ()
-    #set(CPACK_GENERATOR RPM)
-	set(CPACK_GENERATOR DEB)
+    set(CPACK_GENERATOR RPM)
+	#set(CPACK_GENERATOR DEB)
 endif()
 
 set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
@@ -63,7 +61,7 @@ set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 
 set(CPACK_PACKAGE_CONTACT andreykoloskov.ru@gmail.com)
 
-set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON) #
+#set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 
 include(CPack)
 
