--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 dist: xenial
 language: cpp
-compiler: clang
+compiler: g++
 addons:
-  apt:
+  yum:
     packages:
     - libboost-test-dev
     - libspdlog-dev
