--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -71,9 +71,9 @@ set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 
 set(CPACK_PACKAGE_CONTACT andreykoloskov.ru@gmail.com)
 
-if (NOT WIN32 AND NOT ((${CMAKE_SYSTEM_NAME} STREQUAL "Linux") AND (${CMAKE_SYSTEM} MATCHES ".*el7.*")))
-    set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
-endif()
+#if (NOT WIN32 AND NOT ((${CMAKE_SYSTEM_NAME} STREQUAL "Linux") AND (${CMAKE_SYSTEM} MATCHES ".*el7.*")))
+#    set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
+#endif()
 
 include(CPack)
 
