--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
 - cmake .
 - cmake --build .
 - cmake --build . --target test
-- cmake --build . --target package
+- cmake --build . --target package -G DEB
 deploy:
   provider: script
   skip_cleanup: true
