--- a/DockerfileUbuntuTest
+++ b/DockerfileUbuntuTest
@@ -2,7 +2,7 @@ FROM ubuntu:20.04
 
 MAINTAINER Andrey Koloskov <andreykoloskov.ru@gmail.com>
 
-COPY packages/deb/ /app/
+COPY packages/*.deb /app/
 
 WORKDIR /app
 
